--- a/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
+++ b/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
@@ -7,19 +7,19 @@
             <div class="col-12">
               <div class="form-group">
                 <label>People Limit</label>
-                <input type="number" formControlName="peopleLimit" class="form-control">
+                <input type="number" formControlName="peopleLimit" placeholder="Enter people limit" class="form-control">
               </div>
             </div>
             <div class="col-12">
               <div class="form-group">
                 <label>Charges Per Head</label>
-                <input type="number" formControlName="perHeadCharge" class="form-control">
+                <input type="number" formControlName="perHeadCharge" placeholder="Enter per head charges " class="form-control">
               </div>
             </div>
             <div class="col-12">
               <div class="form-group">
                 <label>Charges per Day</label>
-                <input type="number" formControlName="perDayCharge" class="form-control">
+                <input type="number" formControlName="perDayCharge" placeholder="Enter per day charge" class="form-control">
               </div>
             </div>
         </form>
@@ -31,25 +31,25 @@
             <div class="col-6 ">
               <div class="form-group">
                 <label>Work</label>
-                <input type="text" class="form-control" formControlName="work">
+                <input type="text" class="form-control" placeholder="Enter Work" formControlName="work">
               </div>
             </div>
             <div class="col-6">
               <div class="form-group">
                 <label>Work Profile</label>
-                <input type="text" class="form-control" formControlName="profile">
+                <input type="text" class="form-control" placeholder="Enter work profile" formControlName="profile">
               </div>
             </div>
             <div class="col-6 ">
               <div class="form-group ">
                 <label>Start Year</label>
-                <input type="number" class="form-control" formControlName="startYear">
+                <input type="number" class="form-control" placeholder="Enter start year" formControlName="startYear">
               </div>
             </div>
             <div class="col-6 ">
               <div class="form-group ">
                 <label>Duration (in months)</label>
-                <input type="text" class="form-control" formControlName="duration">
+                <input type="text" class="form-control" placeholder="Enter work duration" formControlName="duration">
               </div>
             </div>
             <div class="col-md-12 text-center pt-2">
