--- a/src/app/modules/guide/components/bussiness-details/bussiness-details.component.scss
+++ b/src/app/modules/guide/components/bussiness-details/bussiness-details.component.scss
@@ -2,6 +2,9 @@
 .card input{
   font-family: 'Neuton', serif !important;
 }
+.card select{
+  font-family: 'Neuton', serif;
+}
 .pannel{
     margin: auto;
     width: 80%;
