--- a/src/app/modules/guide/components/personal-details/personal-details.component.html
+++ b/src/app/modules/guide/components/personal-details/personal-details.component.html
@@ -21,21 +21,21 @@
              <div class="form-group">
                 <mdb-icon fas icon="user-circle" class="prefix"></mdb-icon>&nbsp;
                 <label for="form2"> Full Name</label>
-                <input type="text" id="form2" class="form-control" formControlName="name">
+                <input type="text" id="form2" class="form-control" placeholder="Enter name" formControlName="name">
               </div>
             </div>
             <div class="col-md-12">
               <div class="form-group">
                 <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>&nbsp;
                 <label for="form5">Email</label>
-                <input type="email" id="form5" formControlName="email" class="form-control">
+                <input type="email" id="form5" formControlName="email" placeholder="Enter email" class="form-control">
               </div>
             </div>
              <div class="col-md-12">
               <div class="form-group">
                 <mdb-icon fas icon="phone-alt" class="prefix"></mdb-icon>&nbsp;
                 <label for="form6">Phone number</label>
-                <input type="number" id="form6" formControlName="phoneNumber" class="form-control">
+                <input type="number" id="form6" formControlName="phoneNumber" placeholder="Enter phone number" class="form-control">
               </div>
             </div>
             <!-- <div class="col-md-12">
@@ -51,14 +51,14 @@
               <div class="form-group">
                 <mdb-icon fas icon="key" class="prefix"></mdb-icon>&nbsp;
                 <label for="form3">Password</label>
-                <input type="password" id="form3" formControlName="password" class="form-control">
+                <input type="password" id="form3" formControlName="password" placeholder="Enter password"class="form-control">
               </div>
              </div>
              <div class="col-md-6">
               <div class="form-group">
                 <mdb-icon fas icon="key" class="prefix"></mdb-icon>&nbsp;
                 <label for="form4">Confirm Password</label>
-                <input type="password" formControlName="confirmPassword" id="form4" class="form-control">
+                <input type="password" formControlName="confirmPassword" id="form4" placeholder="Enter confirm password" class="form-control">
               </div>
             </div>
             <div class="col-md-5">
@@ -72,7 +72,7 @@
               <div class="form-group">
               <mdb-icon far icon="address-card" class="prefix"></mdb-icon>&nbsp;
               <label for="form4">Aadhar card Number</label>
-              <input type="number" id="form4"formControlName="aadhaarNumber" class="form-control">
+              <input type="number" id="form4"formControlName="aadhaarNumber" placeholder="Enter Aadhar number" class="form-control">
           </div>
           </div>
           <div class="col-md-6">
@@ -98,7 +98,7 @@
             <div class="form-group">
               <mdb-icon far icon="address-book" class="prefix"></mdb-icon>&nbsp;
               <label for="form10">Address</label>
-              <input type="text" formControlName="address" id="form10" class="form-control">
+              <input type="text" formControlName="address" id="form10" class="form-control" placeholder="Enter address">
             </div>
           </div>
           <div class="col-md-12 mt-4 text-center">
