--- a/src/app/modules/guide/components/personal-details/personal-details.component.scss
+++ b/src/app/modules/guide/components/personal-details/personal-details.component.scss
@@ -12,6 +12,9 @@
 .card input{
   font-family: 'Neuton', serif;
 }
+.card select{
+  font-family: 'Neuton', serif;
+}
 .center{
     text-align: center;
     justify-content: center;
