--- a/src/app/modules/guide/pages/languages/languages.component.scss
+++ b/src/app/modules/guide/pages/languages/languages.component.scss
@@ -6,6 +6,9 @@
   font-size: larger;
   // height: 80%;
 }
+.card input{
+  font-family: 'Neuton', serif;
+}
 .headup {
     word-spacing: 0.6rem;
 }
