--- a/src/app/modules/guide/pages/languages/languages.component.html
+++ b/src/app/modules/guide/pages/languages/languages.component.html
@@ -22,8 +22,16 @@
       <button class="btn btn-danger my-0 py-2 float-right" mdbBtn type="button" previousStep>Previous</button>
     </h4>
     <hr>
+   <form autocomplete="off">
+    <div class="row">
+      <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+        <input type="text" class="form-control" mdbInput  [(ngModel)]="langSearch" placeholder="Search for languages" name="langSearch">
+      </div>
+    </div>
+   </form>
     <div class="row my-4">
-        <div class="col-6 col-md-4 col-lg-3 mb-4" (click)="addToSelectedLangList(item)" *ngFor="let item of languageList; let i = index;">
+        <div class="col-6 col-md-4 col-lg-3 mb-4" (click)="addToSelectedLangList(item)"
+         *ngFor="let item of languageList | filter:langSearch; let i = index;">
             <mdb-card [ngClass]="isSelected(item) ? 'activeClass' : getGradientClass(i+1)">
                 <mdb-card-body class="waves-effect waves-light">
                     <div class="m-auto text-center white-text">
