--- a/src/app/modules/tourists/pages/register/register.component.scss
+++ b/src/app/modules/tourists/pages/register/register.component.scss
@@ -3,6 +3,9 @@
 .card input{
   font-family: 'Neuton', serif !important;
 }
+.card select{
+    font-family: 'Neuton', serif !important;
+  }
 .register-card {
     -webkit-box-shadow: 11px 12px 26px -2px rgba(217, 217, 217, 1);
     -moz-box-shadow: 11px 12px 26px -2px rgba(217, 217, 217, 1);
