--- a/src/app/modules/guide/components/bookings/bookings.component.html
+++ b/src/app/modules/guide/components/bookings/bookings.component.html
@@ -1,170 +1,167 @@
 <div class="container-fluid">
-  <app-blog></app-blog>
-  <!--  -->
-  <div class="d-none d-md-block" *ngIf="bookingsList">
-  <div class="row mt-3">
-    <div class="col-12 text-center">
-      <div class="card first" style="z-index: 100; width: 90%; margin-left: 5%;">
-        <h5 class="text-center py-2 my-0">Your Requests</h5>
-      </div>
-    </div>
-  </div>
-  <div class="card mb-5" style="margin-top: -25px;">
-    <div class="card-body">
-      <div class="mt-3 mb-3">
-        <div class="table-responsive">
-          <table class="table table-hover">
-            <thead >
-              <tr>
-                <th scope="col">Sr no.</th>
-                <th scope="col">Tourist</th>
-                <th scope="col">Start Date</th>
-                <th scope="col">Duration</th>
-                <th scope="col">Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let data of bookingsList; let i = index">
-                <th scope="row">{{i+1}}</th>
-                <td>{{data.tourType | titlecase}}</td>
-                <td>{{data.startDate | date: 'dd-MM-yyyy'}}</td>
-                <td>{{data.duration}} days</td>
-                <td>
-                  <button class="btn" color="info" style="margin: auto;" (click)="open(content, data)" mdbBtn type="button" size="sm" mdbWavesEffect>
+    <app-blog></app-blog>
+    <!--  -->
+    <div class="d-none d-md-block" *ngIf="bookingsList">
+        <div class="row mt-3">
+            <div class="col-12 text-center">
+                <div class="card ripe-malinka-gradient" style="z-index: 100; width: 90%; margin-left: 5%;">
+                    <h5 class="text-center white-text py-2 my-0">Your Bookings</h5>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-5" style="margin-top: -25px;">
+            <div class="card-body">
+                <div class="mt-3 mb-3">
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Sr no.</th>
+                                    <th scope="col">Tourist</th>
+                                    <th scope="col">Start Date</th>
+                                    <th scope="col">Duration</th>
+                                    <th scope="col">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let data of bookingsList; let i = index">
+                                    <th scope="row">{{i+1}}</th>
+                                    <td>{{data.touristId[0]?.name | titlecase}}</td>
+                                    <td>{{data.startDate | date: 'dd-MM-yyyy'}}</td>
+                                    <td>{{data.duration}} days</td>
+                                    <td>
+                                        <button class="btn" color="info" style="margin: auto;" (click)="open(content, data)" mdbBtn type="button" size="sm" mdbWavesEffect>
                     <b>VIEW</b>
                   </button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          </div>
-      </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 
-<div *ngIf="!bookingsList">
-  <div class="row cust-grid">
-    <div class="col-12 text-center">
-      <h1>No Bookings !!</h1>
+    <div *ngIf="!bookingsList">
+        <div class="row cust-grid">
+            <div class="col-12 text-center">
+                <h1>No Bookings !!</h1>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 
-<div class="d-block d-md-none mt-4">
-  <mdb-card class="bag mb-4" *ngFor="let data of bookingsList">
-    <mdb-card-body>
-      <mdb-card-title>
-        <h4>{{data.tourType | titlecase}} Tour</h4>
-      </mdb-card-title>
-      <mdb-card-text >
-        <div class="row">
-          <div class="col-4">
-          <div><b>Start-Date</b></div>
-          <div>{{data.startDate | date: 'dd-MM-yyyy'}}</div>
-        </div>
-        <div class="col-4">
-          <div><b>Duration</b></div>
-          <div>{{data.duration}} days</div>
-        </div>
-        <div class="col-4">
-          <div><b>People</b></div>
-          <div>{{data.noOfPeople}}</div>
-        </div>
-        </div>
-      </mdb-card-text>
-      <a size="sm" class="float-right" (click)="open(content, data)" mdbBtn style="background: #0ec8b9;" mdbWavesEffect>VIEW</a>
-    </mdb-card-body>
-  </mdb-card>
-</div>
+    <div class="d-block d-md-none mt-4">
+        <mdb-card class="bag mb-4" *ngFor="let data of bookingsList">
+            <mdb-card-body>
+                <mdb-card-title>
+                    <h4>{{data.tourType | titlecase}} Tour</h4>
+                </mdb-card-title>
+                <mdb-card-text>
+                    <div class="row">
+                        <div class="col-4">
+                            <div><b>Start-Date</b></div>
+                            <div>{{data.startDate | date: 'dd-MM-yyyy'}}</div>
+                        </div>
+                        <div class="col-4">
+                            <div><b>Duration</b></div>
+                            <div>{{data.duration}} days</div>
+                        </div>
+                        <div class="col-4">
+                            <div><b>People</b></div>
+                            <div>{{data.noOfPeople}}</div>
+                        </div>
+                    </div>
+                </mdb-card-text>
+                <a size="sm" class="float-right" (click)="open(content, data)" mdbBtn style="background: #0ec8b9;" mdbWavesEffect>VIEW</a>
+            </mdb-card-body>
+        </mdb-card>
+    </div>
 
 </div>
 
 
 <ng-template #content let-c="close" let-d="dismiss">
-  <div class="modal-header">
-    <h5 class="modal-title" id="modal-basic-title">Tour Details</h5>
-    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+    <div class="modal-header">
+        <h5 class="modal-title" id="modal-basic-title">Tour Details</h5>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
-  </div>
-  <div class="modal-body p-4">
-      <div class="row">
-        <div class="col-12">
-         <h6>{{selectedBooking.tourType | titlecase}} Tour
-            <span class="float-right">{{selectedBooking.bookingDate | date: 'dd-MM-yyyy'}}</span>
-          </h6>
+    </div>
+    <div class="modal-body p-4">
+        <div class="row">
+            <div class="col-12">
+                <h6>{{selectedBooking.tourType | titlecase}} Tour
+                    <span class="float-right">{{selectedBooking.bookingDate | date: 'dd-MM-yyyy'}}</span>
+                </h6>
+            </div>
         </div>
-      </div>
-      <hr class="mt-0">
-      <div class="row">
-        <div class="col-6">
-          <B>Price</B>
+        <hr class="mt-0">
+        <div class="row">
+            <div class="col-6">
+                <B>Price</B>
+            </div>
+            <div class="col-6">
+                Rs. {{selectedBooking.price}}/-
+            </div>
         </div>
-        <div class="col-6">
-          Rs. {{selectedBooking.price}}/-
+        <div class="row">
+            <div class="col-6">
+                <B>Start Date</B>
+            </div>
+            <div class="col-6">
+                {{selectedBooking.startDate | date: 'dd-MM-yyyy'}}
+            </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-6">
-          <B>Start Date</B>
+        <div class="row">
+            <div class="col-6">
+                <B>Duration</B>
+            </div>
+            <div class="col-6">
+                {{selectedBooking.duration}} days
+            </div>
         </div>
-        <div class="col-6">
-          {{selectedBooking.startDate | date: 'dd-MM-yyyy'}}
+        <div class="row">
+            <div class="col-6">
+                <B>People</B>
+            </div>
+            <div class="col-6">
+                {{selectedBooking.noOfPeople}}
+            </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-6">
-          <B>Duration</B>
+        <div class="row">
+            <div class="col-6">
+                <B>Group Type</B>
+            </div>
+            <div class="col-6">
+                {{selectedBooking.groupType | titlecase}}
+            </div>
         </div>
-        <div class="col-6">
-          {{selectedBooking.duration}} days
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-6">
-          <B>People</B>
-        </div>
-        <div class="col-6">
-          {{selectedBooking.noOfPeople}}
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-6">
-          <B>Group Type</B>
-        </div>
-        <div class="col-6">
-          {{selectedBooking.groupType | titlecase}}
-        </div>
-      </div>
-      <table class="table">
-        <thead>
-          <tr>
-            <th><b>Sr no.</b></th>
-            <th><b>Tourist Name</b></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let item of selectedBooking.touristId; let i = index">
-            <td>{{i+1}}</td>
-            <td>{{item.name | titlecase}}</td>
-          </tr>
-        </tbody>
-      </table>
-  </div>
-  <div class="modal-footer row mx-0 ">
-       <div class="col">
-         <button type="button" mdbBtn color="secondary" size="sm" class="waves-light btn-block"
-          (click)="d('Cross click')" mdbWavesEffect>Close&nbsp;
+        <table class="table">
+            <thead>
+                <tr>
+                    <th><b>Sr no.</b></th>
+                    <th><b>Tourist Name</b></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of selectedBooking.touristId; let i = index">
+                    <td>{{i+1}}</td>
+                    <td>{{item.name | titlecase}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="modal-footer row mx-0 ">
+        <div class="col">
+            <button type="button" mdbBtn color="secondary" size="sm" class="waves-light btn-block" (click)="d('Cross click')" mdbWavesEffect>Close&nbsp;
           <mdb-icon fas icon="ban"></mdb-icon></button>
-      </div>
-      <div class="col">
-        <button *ngIf="selectedBooking.tourType !== 'deal'" type="button" mdbBtn color="deep-orange" size="sm" class="btn-block waves-light" 
-        (click)="contactTourist(content, selectedBooking.touristId[0]?.email, selectedBooking.touristId[0].name)" mdbWavesEffect>Contact&nbsp;
+        </div>
+        <div class="col">
+            <button *ngIf="selectedBooking.tourType !== 'deal'" type="button" mdbBtn color="deep-orange" size="sm" class="btn-block waves-light" (click)="contactTourist(content, selectedBooking.touristId[0]?.email, selectedBooking.touristId[0].name)" mdbWavesEffect>Contact&nbsp;
         <mdb-icon fas icon="headset"></mdb-icon></button>
-        <button *ngIf="selectedBooking.tourType === 'deal'" type="button" mdbBtn color="deep-orange" size="sm" class="btn-block waves-light" 
-        (click)="contactTouristRoom(content, selectedBooking.roomDetails?._id)" mdbWavesEffect>Contact&nbsp;
+            <button *ngIf="selectedBooking.tourType === 'deal'" type="button" mdbBtn color="deep-orange" size="sm" class="btn-block waves-light" (click)="contactTouristRoom(content, selectedBooking.roomDetails?._id)" mdbWavesEffect>Contact&nbsp;
         <mdb-icon fas icon="headset"></mdb-icon></button>
-      </div>
+        </div>
     </div>
 </ng-template>
