--- a/src/app/modules/guide/components/requests/requests.component.html
+++ b/src/app/modules/guide/components/requests/requests.component.html
@@ -1,154 +1,153 @@
 <div class="container-fluid">
-  <!--  -->
-  <app-blog></app-blog>
-  <div class="d-none d-md-block" *ngIf="requestList">
-  <div class="row mt-3">
-    <div class="col-12 text-center">
-      <div class="card first" style="z-index: 100; width: 90%; margin-left: 5%;">
-        <h5 class="text-center py-2 my-0">Your Requests</h5>
-      </div>
-    </div>
-  </div>
-  <div class="card mb-5" style="margin-top: -25px;">
-    <div class="card-body">
-      <div class="mt-3 mb-3">
-        <div class="table-responsive">
-          <table class="table table-hover">
-            <thead >
-              <tr>
-                <th scope="col">Sr no.</th>
-                <th scope="col">Tourist</th>
-                <th scope="col">Start Date</th>
-                <th scope="col">Duration</th>
-                <th scope="col">Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let data of requestList; let i = index">
-                <th scope="row">{{i+1}}</th>
-                <td>{{data.tourType | titlecase}}</td>
-                <td>{{data.startDate | date: 'dd-MM-yyyy'}}</td>
-                <td>{{data.duration}} days</td>
-                <td>
-                  <button class="btn" color="info" style="margin: auto;" (click)="open(content, data)" mdbBtn type="button" size="sm" mdbWavesEffect>
+    <!--  -->
+    <app-blog></app-blog>
+    <div class="d-none d-md-block" *ngIf="requestList">
+        <div class="row mt-3">
+            <div class="col-12 text-center">
+                <div class="card dusty-grass-gradient" style="z-index: 100; width: 90%; margin-left: 5%;">
+                    <h5 class="text-center py-2 my-0">Your Requests</h5>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-5" style="margin-top: -25px;">
+            <div class="card-body">
+                <div class="mt-3 mb-3">
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Sr no.</th>
+                                    <th scope="col">Tourist</th>
+                                    <th scope="col">Start Date</th>
+                                    <th scope="col">Duration</th>
+                                    <th scope="col">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let data of requestList; let i = index">
+                                    <th scope="row">{{i+1}}</th>
+                                    <td>{{data.touristId[0]?.name | titlecase}}</td>
+                                    <td>{{data.startDate | date: 'dd-MM-yyyy'}}</td>
+                                    <td>{{data.duration}} days</td>
+                                    <td>
+                                        <button class="btn" color="info" style="margin: auto;" (click)="open(content, data)" mdbBtn type="button" size="sm" mdbWavesEffect>
                     <b>VIEW</b>
                   </button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          </div>
-      </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 
-<div *ngIf="!requestList">
-  <div class="row cust-grid">
-    <div class="col-12 text-center">
-      <h1>No Requests !!</h1>
+    <div *ngIf="!requestList">
+        <div class="row cust-grid">
+            <div class="col-12 text-center">
+                <h1>No Requests !!</h1>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 
 
-<div class="d-block d-md-none mt-4">
-  <mdb-card class="bag mb-4" *ngFor="let data of requestList">
-    <mdb-card-body>
-      <mdb-card-title>
-        <h4>{{data.tourType | titlecase}} Tour</h4>
-      </mdb-card-title>
-      <mdb-card-text >
-        <div class="row">
-          <div class="col-4">
-          <div><b>Start-Date</b></div>
-          <div>{{data.startDate | date: 'dd-MM-yyyy'}}</div>
-        </div>
-        <div class="col-4">
-          <div><b>Duration</b></div>
-          <div>{{data.duration}} days</div>
-        </div>
-        <div class="col-4">
-          <div><b>People</b></div>
-          <div>{{data.noOfPeople}}</div>
-        </div>
-        </div>
-      </mdb-card-text>
-      <a size="sm" class="float-right" (click)="open(content, data)" mdbBtn style="background: #0ec8b9;" mdbWavesEffect>VIEW</a>
-    </mdb-card-body>
-  </mdb-card>
-</div>
-  
+    <div class="d-block d-md-none mt-4">
+        <mdb-card class="bag mb-4" *ngFor="let data of requestList">
+            <mdb-card-body>
+                <mdb-card-title>
+                    <h4>{{data.tourType | titlecase}} Tour</h4>
+                </mdb-card-title>
+                <mdb-card-text>
+                    <div class="row">
+                        <div class="col-4">
+                            <div><b>Start-Date</b></div>
+                            <div>{{data.startDate | date: 'dd-MM-yyyy'}}</div>
+                        </div>
+                        <div class="col-4">
+                            <div><b>Duration</b></div>
+                            <div>{{data.duration}} days</div>
+                        </div>
+                        <div class="col-4">
+                            <div><b>People</b></div>
+                            <div>{{data.noOfPeople}}</div>
+                        </div>
+                    </div>
+                </mdb-card-text>
+                <a size="sm" class="float-right" (click)="open(content, data)" mdbBtn style="background: #0ec8b9;" mdbWavesEffect>VIEW</a>
+            </mdb-card-body>
+        </mdb-card>
+    </div>
+
 </div>
 
 
 <ng-template #content let-c="close" let-d="dismiss">
-  <div class="modal-header">
-    <h5 class="modal-title" id="modal-basic-title">{{selectedRequest.tourType | titlecase}} Tour</h5>
-    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+    <div class="modal-header">
+        <h5 class="modal-title" id="modal-basic-title">{{selectedRequest.tourType | titlecase}} Tour</h5>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
-  </div>
-  <div class="modal-body p-4">
-      <div class="row">
-        <div class="col-12">
-         <h6>{{selectedRequest.touristId[0]?.name | titlecase}}
-            <span class="float-right">{{selectedRequest.bookingDate | date: 'dd-MM-yyyy'}}</span>
-          </h6>
+    </div>
+    <div class="modal-body p-4">
+        <div class="row">
+            <div class="col-12">
+                <h6>{{selectedRequest.touristId[0]?.name | titlecase}}
+                    <span class="float-right">{{selectedRequest.bookingDate | date: 'dd-MM-yyyy'}}</span>
+                </h6>
+            </div>
         </div>
-      </div>
-      <hr class="mt-0">
-      <div class="row">
-        <div class="col-6">
-          <B>Price</B>
+        <hr class="mt-0">
+        <div class="row">
+            <div class="col-6">
+                <B>Price</B>
+            </div>
+            <div class="col-6">
+                Rs. {{selectedRequest.price}}/-
+            </div>
         </div>
-        <div class="col-6">
-          Rs. {{selectedRequest.price}}/-
+        <div class="row">
+            <div class="col-6">
+                <B>Start Date</B>
+            </div>
+            <div class="col-6">
+                {{selectedRequest.startDate | date: 'dd-MM-yyyy'}}
+            </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-6">
-          <B>Start Date</B>
+        <div class="row">
+            <div class="col-6">
+                <B>Duration</B>
+            </div>
+            <div class="col-6">
+                {{selectedRequest.duration}} days
+            </div>
         </div>
-        <div class="col-6">
-          {{selectedRequest.startDate | date: 'dd-MM-yyyy'}}
+        <div class="row">
+            <div class="col-6">
+                <B>People</B>
+            </div>
+            <div class="col-6">
+                {{selectedRequest.noOfPeople}}
+            </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-6">
-          <B>Duration</B>
+        <div class="row">
+            <div class="col-6">
+                <B>Group Type</B>
+            </div>
+            <div class="col-6">
+                {{selectedRequest.groupType | titlecase}}
+            </div>
         </div>
-        <div class="col-6">
-          {{selectedRequest.duration}} days
+    </div>
+    <div class="modal-footer row mx-0 ">
+        <div class="col">
+            <button type="button" mdbBtn color="secondary" size="sm" class="waves-light btn-block" (click)="d('Cross click')" mdbWavesEffect>Close&nbsp;<mdb-icon fas icon="ban"></mdb-icon></button>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-6">
-          <B>People</B>
+        <div class="col">
+            <button type="button" mdbBtn color="green" (click)="acceptRequest(content, selectedRequest._id)" size="sm" class="btn-block waves-light" mdbWavesEffect>Accept&nbsp;<mdb-icon fas icon="map-marked-alt"></mdb-icon></button>
         </div>
-        <div class="col-6">
-          {{selectedRequest.noOfPeople}}
+        <div class="col">
+            <button type="button" mdbBtn color="danger" (click)="rejectRequest(content, selectedRequest._id)" size="sm" class="btn-block waves-light" mdbWavesEffect>Reject&nbsp;<mdb-icon far icon="trash-alt"></mdb-icon></button>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-6">
-          <B>Group Type</B>
-        </div>
-        <div class="col-6">
-          {{selectedRequest.groupType | titlecase}}
-        </div>
-      </div>
-  </div>
-  <div class="modal-footer row mx-0 ">
-       <div class="col">
-         <button type="button" mdbBtn color="secondary" size="sm" class="waves-light btn-block" (click)="d('Cross click')" mdbWavesEffect>Close&nbsp;<mdb-icon fas icon="ban"></mdb-icon></button>
-      </div> 
-      <div class="col">
-        <button type="button" mdbBtn color="green" (click)="acceptRequest(content, selectedRequest._id)" size="sm" class="btn-block waves-light" mdbWavesEffect>Accept&nbsp;<mdb-icon fas icon="map-marked-alt"></mdb-icon></button>
-      </div>
-      <div class="col">
-        <button type="button"  mdbBtn color="danger" (click)="rejectRequest(content, selectedRequest._id)" size="sm" class="btn-block waves-light" mdbWavesEffect>Reject&nbsp;<mdb-icon far icon="trash-alt"></mdb-icon></button>
-      </div>
     </div>
 </ng-template>
-
