--- a/src/app/modules/guide/components/personal-details/personal-details.component.html
+++ b/src/app/modules/guide/components/personal-details/personal-details.component.html
@@ -38,15 +38,20 @@
                 <input type="number" id="form6" formControlName="phoneNumber" placeholder="Enter phone number" class="form-control">
               </div>
             </div>
-            <!-- <div class="col-md-12">
+            <div class="col-sm-6 my-3">
               <div class="form-group">
-                <mdb-icon fas icon="user-circle" class="prefix"></mdb-icon>&nbsp;
-                <label for="form6">Profile Image</label><br>
-                <img [src]="url" height="200"> <br/>
-                <input type='file' accept="image/*" (change)="onSelectFile($event)">
-                <input type='file' accept="image/*">
+                <div class="upload-image">
+                  <label class=" control-label upload"  for="filebutton">
+                    <mdb-icon fas icon="camera-retro"></mdb-icon>&nbsp;
+                    <span>Upload file<br></span>
+                    <input id="filebutton" name="filebutton" #inputFile (change)="onSelectFile($event)" type="file" >
+                  </label>
+                </div>
               </div>
-            </div> -->
+            </div>
+            <div class="col-sm-6">
+              <img  *ngFor="let url of urlArray" [src]="url" width="100%" height="250px" style="padding:10px;"> <br/>
+            </div>
             <div class="col-md-6">
               <div class="form-group">
                 <mdb-icon fas icon="key" class="prefix"></mdb-icon>&nbsp;
@@ -106,8 +111,6 @@
               (click)="submitPersonalDetails()" type="button" >Next
             </button>
           </div>
-          </div>
-          <div class="row card-body pt-0 mx-0">
           </div>
         </form>
         </div>
