--- a/src/app/shared/components/contact-us/contact-us.component.html
+++ b/src/app/shared/components/contact-us/contact-us.component.html
@@ -20,7 +20,9 @@
             <span>Help</span>
           </div>
           <div class="app-contact">CONTACT INFO : voila@gmail.com</div>
-          <div [routerLink]="['/admin/login']" style="font-size: 12px; color: #888;">ADMIN</div>
+          <a [routerLink]="['/admin/login']" *ngIf="!jwtService.getToken()" class="adminLink">
+            ADMIN
+          </a>
         </div>
         <div class="screen-body-item">
           <div class="app-form">
