--- a/src/app/shared/components/about/about.component.html
+++ b/src/app/shared/components/about/about.component.html
@@ -20,8 +20,8 @@
     </div>
     <div class="row">
       <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid pp col-4" src="../../../../assets/images/Ekta.jpeg" style="border-radius: 50%;">
-    <div class="col-8 row decoids">
+    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-0" src="../../../../assets/images/Ekta.jpeg" style="border-radius: 50%;">
+    <div class=" col-12 col-sm-8 ml-5 ml-sm-0 mt-3 mt-sm-0 row decoids">
       <h2 class=" col-12"><p>Ekta Garg</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;happyekta99@gmail.com</p></div>
       <div class="col-6"><p><i class="fab fa-instagram"></i>&nbsp;&nbsp;ektagarg99</p></div>
@@ -29,8 +29,8 @@
     </div>
   </div>
   <div class="col-12 col-lg-6  row mb-5 mt-4">
-    <img class="img-fluid pp col-4" src="../../../../assets/images/rajat.jpg" style="border-radius: 50%;">
-    <div class="col-8 row decoids">
+    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-0" src="../../../../assets/images/rajat.jpg" style="border-radius: 50%;">
+    <div class=" col-12 col-sm-8 ml-5 ml-sm-0 mt-3 mt-sm-0 row decoids">
       <h2 class=" col-12"><p>Rajat Sharma</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;rajatsharmaatri@gmail.com</p></div>
       <div class="col-6"><p><i class="fab fa-instagram"></i>&nbsp;&nbsp;rajat_sd</p></div>
@@ -38,8 +38,8 @@
     </div>
   </div>
   <div class="col-12 col-lg-6  row mb-5 mt-4">
-    <img class="img-fluid pp col-4" src="../../../../assets/images/venu.jpeg" style="border-radius: 50%;">
-    <div class="col-8 row decoids">
+    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-0" src="../../../../assets/images/venu.jpeg" style="border-radius: 50%;">
+    <div class=" col-12 col-sm-8 ml-5 ml-sm-0 mt-3 mt-sm-0 row decoids">
       <h2 class=" col-12"><p>VenuGopal</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;venugopalsinghal@gmail.com</p></div>
       <div class="col-6"><p><i class="fab fa-instagram"></i>&nbsp;&nbsp;venugopalsinghal</p></div>
@@ -47,8 +47,8 @@
     </div>
   </div>
   <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid pp col-4" src="../../../../assets/images/Shobhit.jpeg" style="border-radius: 50%;">
-    <div class="col-8 row decoids">
+    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-0" src="../../../../assets/images/Shobhit.jpeg" style="border-radius: 50%;">
+    <div class=" col-12 col-sm-8 ml-5 ml-sm-0 mt-3 mt-sm-0 row decoids">
       <h2 class=" col-12"><p>Shobit Jain</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;jainshobit0@gmail.com</p></div>
       <div class="col-6"><p><i class="fab fa-instagram"></i>&nbsp;&nbsp;sj_2050_</p></div>
@@ -56,8 +56,8 @@
     </div>
   </div>
   <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid pp col-4" src="../../../../assets/images/vidhi.JPG" style="border-radius: 50%;">
-    <div class="col-8 row decoids">
+    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-0" src="../../../../assets/images/vidhi.JPG" style="border-radius: 50%;">
+    <div class=" col-12 col-sm-8 ml-5 ml-sm-0 mt-3 mt-sm-0 row decoids">
       <h2 class=" col-12"><p>Vidhi Agrawal</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;vidhiagrawal305@gmail.com</p></div>
       <div class="col-6"><p><i class="fab fa-instagram"></i>&nbsp;&nbsp;vidhi_agrawal3</p></div>
@@ -65,8 +65,8 @@
     </div>
   </div>
    <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid pp col-4" src="../../../../assets/images/archit.JPG" style="border-radius: 50%;">
-    <div class="col-8 row decoids">
+    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-0" src="../../../../assets/images/archit.JPG" style="border-radius: 50%;">
+    <div class=" col-12 col-sm-8 ml-5 ml-sm-0 mt-3 mt-sm-0 row decoids">
       <h2 class=" col-12"><p>Archit jain</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;architjain808@gmail.com</p></div>
       <div class="col-6"><p><i class="fab fa-instagram"></i>&nbsp;&nbsp;_archit.jain_</p></div>
