--- a/src/app/modules/tourists/components/guides-list/guides-list.component.html
+++ b/src/app/modules/tourists/components/guides-list/guides-list.component.html
@@ -1,5 +1,5 @@
 <div class="request-card d-none d-lg-block">
-    <mdb-card class="w-auto ml-lg-4 my-3 mx-md-3" *ngFor="let guide of searchService.guidesList; let i=index">
+    <mdb-card class="w-auto ml-lg-4 my-3 mx-md-3" *ngFor="let guide of searchService.guidesList">
         <div class="container1">
             <mdb-card-body class="p-3">
                 <div class="row">
@@ -23,7 +23,8 @@
                             </div>
                         </div>
                         <span class="float-right">
-                            <a data-toggle="collapse" [href]="'#' + i" aria-expanded="false" [attr.aria-controls]="i" class="text-decoration-none">View more</a>
+                            <!-- <a data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample" class="text-decoration-none">View more</a> -->
+                            <a (click)="setSelectedGuide(guide)" [attr.aria-expanded]="selectedGuide == guide" [attr.aria-controls]="i" class="text-decoration-none">View more</a>
                         </span>
                     </div>
                     <div class="col-md-4 p-2" style="border-left: 1px solid rgba(128, 128, 128, 0.356);">
@@ -48,7 +49,7 @@
         </div>
 
 
-        <div class="collapse mx-md-4" [id]="i">
+        <div class="collapse mx-md-4" [id]="i" [ngbCollapse]="selectedGuide !== guide">
             <div class="mt-3">
                 <ul class="nav nav-tabs mb-3" id="myTab" role="tablist">
                     <li class="nav-item">
@@ -126,6 +127,7 @@
                                         <mdb-badge class="float-right" pill="true" info="true">Voila approved &nbsp;
                                             <mdb-icon fas icon="check-double"></mdb-icon>
                                         </mdb-badge>&nbsp;
+
                                         <p>Great Experience and a really cool and hot man to roam with</p>
                                     </div>
                                 </div>
@@ -163,6 +165,7 @@
     </mdb-card>
 </div>
 
+
 <div class="row m-3">
     <div class="col-12 col-sm-6 col-md-6  d-block d-lg-none mb-4" *ngFor="let guide of searchService.guidesList">
         <div class="view guide-card" style="position: relative;">
@@ -172,19 +175,27 @@
                     <i class="fa fa-star star" aria-hidden="true"></i>
                     <i class="fa fa-star star" aria-hidden="true"></i>
                     <i class="fa fa-star star" aria-hidden="true"></i>
+
                     <div style="font-size:12px;">(22 REVIEWS)</div>
                 </div>
                 <div style="position:absolute; bottom:6px; left:10px; overflow-wrap: break-word;">
                     <h4 class="guide-name">{{guide.gender}} {{guide.name | titlecase}}</h4>
+
                 </div>
                 <div style="position:absolute; bottom:6px; right:10px;" class="float-right">
                     <div class="text-center">₹{{guide.perHeadCharge}}/head/day</div>
+
                     <button type="button" (click)="openModal(personalTour, guide)" style=" border: 1px solid black; font-size: 15px;" class="white black-text my-2" mdbWavesEffect>BOOK NOW!</button>
+
                 </div>
             </div>
         </div>
+
     </div>
 </div>
+
+
+
 
 <!-- personal Tour Book -->
 <div mdbModal #personalTour="mdbModal" class="modal fade" id="modalLoginAvatar" tabindex="-1" role="dialog" aria-labelledby="mytourLabel" aria-hidden="true">
