--- a/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
+++ b/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
@@ -8,6 +8,7 @@
               <div class="form-group">
                 <label>People Limit</label>
                 <input type="number" formControlName="peopleLimit" placeholder="Enter people limit" class="form-control">
+                <small class="text-mute">Number of people you can deal with at a time</small>
               </div>
             </div>
             <div class="col-12">
