--- a/src/app/modules/tourists/pages/register/register.component.html
+++ b/src/app/modules/tourists/pages/register/register.component.html
@@ -18,6 +18,7 @@
                                     <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>&nbsp;
                                     <label for="form5">Email</label>
                                     <input type="text" id="form5" formControlName="email" placeholder="Enter email" class="form-control">
+                                    <small class="text-mute">Your Email should not be already Register</small>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 mb-2">
@@ -25,7 +26,8 @@
                                     <mdb-icon fas icon="phone-alt" class="prefix"></mdb-icon>&nbsp;
                                     <label for="form4">Phone Number</label>
                                     <input type="text" id="form4" formControlName="phoneNumber" placeholder="Enter phone no" class="form-control">
-                                </div>
+                                    <small class="text-mute">Your Number should not be already Register</small>
+                                  </div>
                             </div>
                             <div class="col-12 col-md-6 mb-2">
                                 <div class="form-group">
