--- a/src/app/modules/guide/components/personal-details/personal-details.component.html
+++ b/src/app/modules/guide/components/personal-details/personal-details.component.html
@@ -29,6 +29,8 @@
                 <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>&nbsp;
                 <label for="form5">Email</label>
                 <input type="email" id="form5" formControlName="email" placeholder="Enter email" class="form-control">
+                <small class="text-mute">Your Email should not be already Register</small>
+
               </div>
             </div>
              <div class="col-md-12">
@@ -36,6 +38,8 @@
                 <mdb-icon fas icon="phone-alt" class="prefix"></mdb-icon>&nbsp;
                 <label for="form6">Phone number</label>
                 <input type="number" id="form6" formControlName="phoneNumber" placeholder="Enter phone number" class="form-control">
+                <small class="text-mute">Your Number should not be already Register</small>
+
               </div>
             </div>
             <div class="col-sm-6 my-3">
@@ -45,6 +49,7 @@
                     <mdb-icon fas icon="camera-retro"></mdb-icon>&nbsp;
                     <span>Upload file<br></span>
                     <input id="filebutton" name="filebutton" #inputFile (change)="onSelectFile($event)" type="file" >
+                    <small class="text-mute">Select a Valid Image File</small>
                   </label>
                 </div>
               </div>
@@ -78,7 +83,9 @@
               <mdb-icon far icon="address-card" class="prefix"></mdb-icon>&nbsp;
               <label for="form4">Aadhar card Number</label>
               <input type="number" id="form4"formControlName="aadhaarNumber" placeholder="Enter Aadhar number" class="form-control">
-          </div>
+              <small class="text-mute">For Admin Verification</small>
+
+            </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
