--- a/src/app/shared/components/about/about.component.html
+++ b/src/app/shared/components/about/about.component.html
@@ -3,7 +3,7 @@
     <div>
       <img class="img-fluid card-title pt-3 mb-5 font-bold" src="../../../../assets/images/areoplane white.png" alt="">
       <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>A local guide hiring platform </strong></h2>
-      <p class="mx-5 mb-5">Nobody knows a location better than its local residents.
+      <p class="mx-0 mx-sm-5 mb-3">Nobody knows a location better than its local residents.
         Voila is an app which harnesses the same fact and connects a traveller to his/her compatible guide who shares interests like food, history, architecture, etc. so that the travelling experience can become even better while giving a significant boost to freelancing opportunities in the tourism industry.
       </p>
     </div>
@@ -12,15 +12,15 @@
 
   <div class="text-center py-5 px-4 my-5">
     <div>
-      <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>Meet Your developers</strong></h2>
+      <h2 class="card-title h1-responsive pt-3 mb-3 font-bold"><strong>Meet Your developers</strong></h2>
       <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>The Decoits 3.0</strong></h2>
-      <p class="mx-5 mb-5">We are a bunch of nerds from Earth C-137 who are mad about the product we develop. Focused on finding a solution that actually works and can be applied to the industry right off the bat. Rigorous Brainstorming before taking any decision forward, making an app with a detailed thought behind every user experience are some of our general practices.
+      <p class="mx-0 mx-sm-5 mb-5">We are a bunch of nerds from Earth C-137 who are mad about the product we develop. Focused on finding a solution that actually works and can be applied to the industry right off the bat. Rigorous Brainstorming before taking any decision forward, making an app with a detailed thought behind every user experience are some of our general practices.
       </p>
  </div>
     </div>
     <div class="row">
       <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-0" src="../../../../assets/images/Ekta.jpeg" style="border-radius: 50%;">
+    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-3" src="../../../../assets/images/Ekta.jpeg" style="border-radius: 50%;">
     <div class=" col-12 col-sm-8 ml-5 ml-sm-0 mt-3 mt-sm-0 row decoids">
       <h2 class=" col-12"><p>Ekta Garg</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;happyekta99@gmail.com</p></div>
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="col-12 col-lg-6  row mb-5 mt-4">
-    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-0" src="../../../../assets/images/rajat.jpg" style="border-radius: 50%;">
+    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-3" src="../../../../assets/images/rajat.jpg" style="border-radius: 50%;">
     <div class=" col-12 col-sm-8 ml-5 ml-sm-0 mt-3 mt-sm-0 row decoids">
       <h2 class=" col-12"><p>Rajat Sharma</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;rajatsharmaatri@gmail.com</p></div>
@@ -38,7 +38,7 @@
     </div>
   </div>
   <div class="col-12 col-lg-6  row mb-5 mt-4">
-    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-0" src="../../../../assets/images/venu.jpeg" style="border-radius: 50%;">
+    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-3" src="../../../../assets/images/venu.jpeg" style="border-radius: 50%;">
     <div class=" col-12 col-sm-8 ml-5 ml-sm-0 mt-3 mt-sm-0 row decoids">
       <h2 class=" col-12"><p>VenuGopal</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;venugopalsinghal@gmail.com</p></div>
@@ -47,7 +47,7 @@
     </div>
   </div>
   <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-0" src="../../../../assets/images/Shobhit.jpeg" style="border-radius: 50%;">
+    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-3" src="../../../../assets/images/Shobhit.jpeg" style="border-radius: 50%;">
     <div class=" col-12 col-sm-8 ml-5 ml-sm-0 mt-3 mt-sm-0 row decoids">
       <h2 class=" col-12"><p>Shobit Jain</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;jainshobit0@gmail.com</p></div>
@@ -56,7 +56,7 @@
     </div>
   </div>
   <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-0" src="../../../../assets/images/vidhi.JPG" style="border-radius: 50%;">
+    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-3" src="../../../../assets/images/vidhi.JPG" style="border-radius: 50%;">
     <div class=" col-12 col-sm-8 ml-5 ml-sm-0 mt-3 mt-sm-0 row decoids">
       <h2 class=" col-12"><p>Vidhi Agrawal</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;vidhiagrawal305@gmail.com</p></div>
@@ -65,7 +65,7 @@
     </div>
   </div>
    <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-0" src="../../../../assets/images/archit.JPG" style="border-radius: 50%;">
+    <img class="img-fluid pp col-12 col-sm-4 px-5 px-sm-3" src="../../../../assets/images/archit.JPG" style="border-radius: 50%;">
     <div class=" col-12 col-sm-8 ml-5 ml-sm-0 mt-3 mt-sm-0 row decoids">
       <h2 class=" col-12"><p>Archit jain</p></h2>
       <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;architjain808@gmail.com</p></div>
