--- a/src/app/shared/components/login-page/login-page.component.html
+++ b/src/app/shared/components/login-page/login-page.component.html
@@ -13,6 +13,7 @@
                         <div class="md-form form-group mb-5">
                             <input mdbInput type="password" formControlName="password" id="form2" class="form-control">
                             <label for="form2">password</label>
+                           <div class="text-white"><input type="checkbox">&nbsp;Show Password</div>
                             <a class="mt-2 text-info float-right">Forgot Password?</a>
                             <!-- <small *ngIf="f.password.value == '' && (f.password.dirty || f.password.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small> -->
                         </div>
@@ -32,7 +33,10 @@
                         </div>
                         <div class="md-form form-group mb-5">
                             <input mdbInput type="password" formControlName="password" id="form4" class="form-control">
-                            <label for="form4">password</label>
+                            <label for="form4">password </label>
+                            <div class="text-white"><input type="checkbox">&nbsp;Show Password</div>
+
+
                             <a class="mt-2 text-info float-right">Forgot Password?</a>
 
                             <!-- <small *ngIf="f.password.value == '' && (f.password.dirty || f.password.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small> -->
@@ -77,6 +81,9 @@
                             <div class="group1 form-group mb-5">
                                 <label for="form2" class="label">Password</label>
                                 <input mdbInput type="password" formControlName="password" id="form2" class="input">
+                                <div class="text-white"><input type="checkbox">&nbsp;Show Password</div>
+
+
                                 <a class="mt-2 text-info float-right">Forgot Password?</a>
                             </div>
                             <div class="group1 form-group" style="margin-top: 70px;">
@@ -94,6 +101,9 @@
                             <div class="group1 form-group mb-5">
                                 <label for="form2" class="label">Password</label>
                                 <input mdbInput type="password" formControlName="password" id="form2" class="input">
+                                <div class="text-white"><input type="checkbox">&nbsp;Show Password</div>
+
+
                                 <a class="mt-2 text-info float-right">Forgot Password?</a>
                             </div>
                             <div class="group1 form-group" style="margin-top: 70px;">
