--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -22,13 +22,13 @@
             <li class="nav-item">
               <a (click)="onLinkClick()" class="nav-link waves-light"  [routerLink]="['/login/tourist']" routerLinkActive="active" mdbWavesEffect>
                   <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
-                  LogIn</a>
+                  <mdb-icon fas icon="sign-in-alt"></mdb-icon>LogIn</a>
           </li>
             <!-- Dropdown -->
             <li class="nav-item dropdown" dropdown>
                 <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
                     <!-- <mdb-icon fas icon="user"></mdb-icon>  -->
-                    Register<span class="caret"></span></a>
+                    <mdb-icon fas icon="user-plus"></mdb-icon>Register<span class="caret"></span></a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                     <a class="dropdown-item waves-light" (click)="onLinkClick()" mdbWavesEffect [routerLink]="['/touristsRegister']" routerLinkActive="active">Tourists</a>
                     <a class="dropdown-item waves-light" (click)="onLinkClick()" mdbWavesEffect [routerLink]="['/guideRegister']" routerLinkActive="active">Guide</a>
@@ -228,13 +228,13 @@
             <li class="nav-item">
               <a (click)="onLinkClick()" class="nav-link waves-light"  [routerLink]="['/login/tourist']" routerLinkActive="active" mdbWavesEffect>
                   <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
-                  LogIn</a>
+                  <mdb-icon fas icon="sign-in-alt"></mdb-icon>LogIn</a>
           </li>
             <!-- Dropdown -->
             <li class="nav-item dropdown" dropdown>
                 <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
                     <!-- <mdb-icon fas icon="user"></mdb-icon>  -->
-                    Register<span class="caret"></span></a>
+                    <mdb-icon fas icon="user-plus"></mdb-icon>Register<span class="caret"></span></a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                     <a class="dropdown-item waves-light" (click)="onLinkClick()" mdbWavesEffect [routerLink]="['/touristsRegister']" routerLinkActive="active">Tourists</a>
                     <a class="dropdown-item waves-light" (click)="onLinkClick()" mdbWavesEffect [routerLink]="['/guideRegister']" routerLinkActive="active">Guide</a>
